syntax = "proto3";

package vn.techres.microservice.grpc.nodejs_food_channel_processor.channel_order;

service ChannelOrderService {
    rpc getOrderDetail (OrderDetailRequest) returns (OrderBaseResponse);
    rpc getOrders (OrderRequest) returns (ResultBaseResponse);
    rpc syncOrders (SyncOrderRequest) returns (BaseEmptyResponse);

    rpc syncOrdersMongo (SyncOrderMongoRequest) returns (BaseEmptyResponse);

}

message Empty {
}

message BaseEmptyResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

// ---------- getOrderDetail ---------------

message OrderDetailRequest {
    int32 id = 1;
    int32 is_app_food = 2;
}

message OrderDetail {
    int32 id = 1;
    int32 customer_order_id = 2;
    string food_id = 3;
    string food_name = 4;
    int32 order_detail_parent_id = 5;
    int32 order_detail_combo_parent_id = 6;
    string customer_order_detail_addition_ids = 7;
    string customer_order_detail_combo_ids = 8;
    string customer_order_detail_combo = 9;
    string customer_order_detail_addition = 10;
    int32 quantity = 11;
    double price = 12;
    double total_price = 13;
    int32 is_addition = 14;
    int32 is_combo = 15;
    string note = 16;
    double total_price_addition = 17;
    string created_at = 18;
    string updated_at = 19;
    string food_options = 20;
}

message Order {
    int32 id = 1;
    string channel_order_id = 2;
    int32 channel_order_food_id = 3;
    string channel_branch_id = 4;
    double total_amount = 5;
    string driver_name = 6;
    string driver_avatar = 7;
    string channel_order_food_name = 8;
    string channel_order_food_code = 9;
    int32 restaurant_id = 10;
    int32 restaurant_brand_id = 11;
    int32 branch_id = 12;
    int32 order_id = 13;
    int32 customer_id = 14;
    int32 table_id = 15;
    int32 area_id = 16;
    string table_name = 17;
    string customer_name = 18;
    string phone = 19;
    string address = 20;
    string note = 21;
    int32 payment_method = 22;
    int32 payment_status = 23;
    int32 customer_order_status = 24;
    int32 customer_order_type = 25;
    string created_at = 26;
    string updated_at = 27;
    double shipping_fee = 28;
    string tracking_url = 29;
    string shippe_name = 30;
    string shipper_phone = 31;
    int32 order_time = 32;
    string cancel_comment = 33;
    int32 restaurant_third_party_delivery_id = 34;
    string shipping_lat = 35;
    string shipping_lng = 36;
    string third_party_delivery_order_id = 37;
    string third_party_delivery_name = 38;
    int32 is_app_food = 39;
    string display_id = 40;
    double order_amount = 41;
    double discount_amount = 42;
    double customer_order_amount = 43;
    double customer_discount_amount = 44;
    repeated OrderDetail details = 45;
    string channel_order_code = 46;

}

message OrderBaseResponse {
  int32 status = 1;
  string message = 2;
  Order data = 3;
}

message ListOrderBaseResponse {
  int32 status = 1;
  string message = 2;
  repeated Order data = 3;
}


// ---------- getOrders ---------------

message OrderRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
    string customer_order_status = 5;
    int32 is_have_restaurant_order = 6;
    int32 is_app_food = 7;
    int32 is_active = 8;
    int32 is_connection_SHF = 9;
    int32 is_connection_GRF = 10;
    int32 is_connection_BEF = 11;
    string object_SHF = 12;
    string object_GRF = 13;
    string object_BEF = 14;

}

message ResultBaseResponse {
  int32 status = 1;
  string message = 2;
  ResultResponse data = 3;
}

message ErrorResponse {
  string code = 1;
  string message = 2;
  int32 channel_order_food_token_id = 3;
}

message ResultResponse {
  repeated ErrorResponse errors = 1;
  repeated Order list = 2;
}

// ---------- syncOrders ---------------

message SyncOrderRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    string access_tokens = 4;
    string new_orders_SHF = 5;
    string new_orders_GRF = 6;
    string new_orders_BEF = 7;
    string history_orders_SHF = 8;
    string history_orders_GRF = 9;
    string history_orders_BEF = 10;
    string customers = 11;
}

// ---------- syncOrdersMongo ---------------

message SyncOrderMongoRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
    string access_tokens = 5;
}